# reddit-memes

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml
docs/: index.md  modules.md
images_download_test/: download_images.py  download_images_test.csv  download_images_test.jsonl  download_images_test_clean.csv  test_download_images_notebook.ipynb
python_functions/: posts_dataset_preprocess.py
reddit_memes/: Memes.ipynb  ThesisMemes.ipynb  test_text_extract.ipynb  utils.py
reddit_memes/Data Collection Functions/: Memes_datasets_preprocessing_subsetting.ipynb  check_urls.py  download_images.ipynb  download_images.py  image_sampler.py  preprocess_subset_function.py
reddit_memes/ollama/: analysis.ipynb  inference.ipynb  inference.py  labelling.ipynb  labelling.py  lvm_experiments.ipynb
tests/: test_foo.py
