[project]
name = "reddit-memes"
version = "0.0.1"
description = "This project aims to predict meme success on Reddit with a multimodal approach using computer vision, generative AI and other techniques."
authors = [{ name = "Francisco Gomes", email = "46953@novasbe.pt" }, { name = "Guilherme Raimundo", email = "46953@novasbe.pt" }, { name = "Marta Dinis", email = "46953@novasbe.pt" }, { name = "Martim Costa", email = "46953@novasbe.pt" }, { name = "Martim Esteves", email = "46953@novasbe.pt" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.12,<3.13"
dependencies = [
    "dask>=2024.9.0",
    "dask-ml>=2024.4.4",
    "ipykernel>=6.29.5",
    "lightgbm>=4.5.0",
    "matplotlib>=3.9.2",
    "networkx>=3.3",
    "nltk>=3.9.1",
    "pandas>=2.2.2",
    "pillow>=10.4.0",
    "pipdeptree>=2.23.3",
    "pyarrow>=17.0.0",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.17.0",
    "transformers>=4.44.2",
    "xgboost>=2.1.1",
    "zstandard>=0.23.0",
]

[project.urls]
Homepage = "https://martimesteves1.github.io/reddit-memes/"
Repository = "https://github.com/martimesteves1/reddit-memes"
Documentation = "https://martimesteves1.github.io/reddit-memes/"

[tool.uv]
dev-dependencies = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "deptry>=0.20.0",
    "mypy>=0.991",

    "ruff>=0.0.235",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.19.0",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
files = ["reddit_memes"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 79
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true



[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
